Fixed menu overlapped by footer

--- a/src/components/footer/SubFooter.css
+++ b/src/components/footer/SubFooter.css
@@ -1,7 +1,6 @@
 #footer {
     background: #131420;
     position: relative;
-    z-index: 2;
 }
 #footer .container {
     padding-top: 70px;
